<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Duino Tag</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- MAIN SCREEN STRINGS -->
    <string name="button_join">Join</string>
    <string name="button_create">Create</string>
    <string name="button_account">Account</string>
    <string name="button_options">Options</string>
    <string name="button_test">Serial Test</string>
    <string name="test_log">You killed <b>JonesJones123</b>\nYou were killed by <b>DMS_Oh_No</b>\nRed team needs 10 kills to win!</string>
    <string name="title_activity_main_game">Duino Tag</string>
    <string name="title_activity_account">Account Settings</string>
    <string name="preference_file_key">evans.dave.duinotag.PREFERENCE_FILE_KEY</string>
    <string name="saved_name">preference_saved_name</string>
    <string name="saved_name_default">UNKNOWN_PLAYER</string>
    <string name="saved_id">preference_saved_id</string>
    <string name="saved_id_default">0</string>
    <string name="title_activity_join_game">JoinGameActivity</string>
    <string name="title_activity_loadout_config">LoadoutConfigActivity</string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_activity_list_view_example">ListViewExampleActivity</string>
    <string name="title_activity_serial_test">SerialTestActivity</string>

</resources>
