<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">


    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_join"
        android:textSize="24dp"
        style="@style/dt_button"
        android:layout_margin="10dp"
        android:onClick="startJoin" />

    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create"
        android:textSize="24dp"
        style="@style/dt_button"
        android:layout_margin="10dp"
        android:onClick="startTest2" />

    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_account"
        android:textSize="24dp"
        android:onClick="startAccount"
        style="@style/dt_button"
        android:layout_margin="10dp" />

    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_options"
        android:textSize="24dp"
        style="@style/dt_button"
        android:layout_margin="10dp" />

    <Button
        android:onClick="startSerialTest"

        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_test"
        android:textSize="24dp"
        style="@style/dt_button"
        android:layout_margin="10dp" />

</LinearLayout>
